--- a/heroweb/main/templates/explore.html
+++ b/heroweb/main/templates/explore.html
@@ -1,112 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class='container'>
-    <div class='row border px-4'>
-        <h1 class='text-center m-4'>{{post.title}}</h1>
-        <hr>
-        <p>{{post.text}}</p>
-        <p>Author: {{post.author}}</p>
-        <nav class='mt-3'>
-            <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                {% for tab in tabs %}
-                    {% if forloop.first %}
-                        <button class="nav-link active" id="nav-{{tab.title|cut:' ' }}-tab" data-bs-toggle="tab" data-bs-target="#nav-{{tab.title|cut:' ' }}" type="button" role="tab" aria-controls="nav-{{tab.title|cut:' ' }}" aria-selected="true">{{tab.title}}</button>
-                    {% else %}
-                        <button class="nav-link" id="nav-{{tab.title|cut:' '}}-tab" data-bs-toggle="tab" data-bs-target="#nav-{{tab.title|cut:' ' }}" type="button" role="tab" aria-controls="nav-{{tab.title|cut:' ' }}" aria-selected="false">{{tab.title}}</button>
-                    {% endif %}
-                {% endfor %}
-            </div>
-        </nav>
-        <div class="tab-content py-4 px-5" id="nav-tabContent">
-            {% for tab in tabs %}
-                {% if forloop.first %}
-                    <div class="tab-pane fade show active" id="nav-{{tab.title|cut:' ' }}" role="tabpanel" aria-labelledby="nav-{{tab.title|cut:' '}}-tab">
-                        {{tab.text}}
-                        <div class='mb-3 mt-5 fs-2'>Replies</div>
-                        <hr>
-                        <div id="carouselExampleControls-{{tab.title|cut:' ' }}" class="carousel slide">
-                            <div class="carousel-inner mx-5">
-                                {% for view in views %}
-                                    {% if forloop.first %}
-                                        <div class="carousel-item active">
-                                            <div class='row mt-3 px-4'>
-                                                {% for reply in view %}
-                                                    <div class="card mx-1" style="width: 18rem;">
-                                                        <div class="card-body">
-                                                        <h5 class="card-title">{{reply.title}}</h5>
-                                                        <small>{{reply.author}}</small> 
-                                                        <hr>
-                                                        <p class="card-text">{{reply.text}}</p>
-                                                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                                                        </div>
-                                                    </div>
-                                                {% endfor %}
-                                            </div>
-                                        </div>
-                                    {% else %}
-                                        <div class="carousel-item">
-                                            <div class='row mt-3 px-4'>
-                                                {% for reply in view %}
-                                                    <div class="card mx-1" style="width: 18rem;">
-                                                        <div class="card-body">
-                                                        <h5 class="card-title">{{reply.title}}</h5>
-                                                        <small>{{reply.author}}</small> 
-                                                        <hr>
-                                                        <p class="card-text">{{reply.text}}</p>
-                                                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                                                        </div>
-                                                    </div>
-                                                {% endfor %}
-                                            </div>
-                                        </div>
-                                    {% endif %}
-                                {% endfor %}
-                            </div>
-                            <button class="carousel-control-prev bg-dark rounded reply-button mt-5" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next bg-dark rounded reply-button mt-5"  type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
-                    </div>
-                {% else %}
-                    <div class="tab-pane fade" id="nav-{{tab.title|cut:' ' }}" role="tabpanel" aria-labelledby="nav-{{tab.title|cut:' ' }}-tab">
-                        {{tab.text}}
-                        <div class='mb-3 mt-5 fs-2'>Replies</div>
-                        <hr>
-                        <div id="carouselExampleControls-{{tab.title|cut:' ' }}" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner mx-5">
-                                <div class="carousel-item active">
-                                    <div class='row mt-3 px-4'>
-                                        <div class="card mx-1" style="width: 18rem;">
-                                            <div class="card-body">
-                                            <h5 class="card-title">asdasd</h5>
-                                            <hr>
-                                            <p class="card-text">fghfgh</p>
-                                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev bg-dark rounded reply-button mt-5" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next bg-dark rounded reply-button mt-5"  type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
-        </div>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+    <div class="container-fluid justify-content-center">
+        <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" value='Electronics'>
+            <button class="btn btn-outline-success" type="button">Search</button>
+        </form>
     </div>
+</nav>
+<div class="text-center">
+    <small>Results about <i>Electronics</i></small>
 </div>
 
+<div class='d-flex row mt-5 justify-content-center'>
+    {% for post in posts %}
+        {% include 'builder/post_prev.html' %}
+    {% endfor %}
+</div>
 
-{% endblock %}
+{% endblock content %}
