--- a/heroweb/main/templates/index.html
+++ b/heroweb/main/templates/index.html
@@ -3,9 +3,9 @@
 
 <div class='container'>
     <div class="row text-center">
-        <h1 class='mb-3'>Heronet</h1>
+        <h1 class='mb-3 display-1'>HeroCall</h1>
         <hr>
-        <h4>Become a hero!</h4>
+        <h2>Become a hero!</h2>
         <p><i>Description</i></p>
     </div>
     <div class='d-flex row mt-5 justify-content-center'>
