--- a/heroweb/main/static/css/main.css
+++ b/heroweb/main/static/css/main.css
@@ -5,13 +5,28 @@ html {
 body {
     color: #5a5a5a;
     padding-top: 50px;
-    /*background-color: #2B2B71;  For browsers that do not support gradients 
-    background-image: linear-gradient(to right, #212529 , #2B2B71);*/
+    background-color: rgb(141, 233, 141);
+    font-family: 'Oxygen', sans-serif;
     min-height: 100vh;
     overflow-x: hidden;
 }
+
+    .go-btn {
+        background-color: rgb(86, 165, 175);
+        border-color: rgb(86, 165, 175);
+    }
+
+    .go-btn:hover {
+        background-color: rgb(54, 104, 110);
+        border-color: rgb(54, 104, 110);
+    }
+
+    .end-post {
+        align-self: flex-end;
+    }
+
     .brand-text {
-        color:rgb(192, 192, 192);
+        color:rgb(3, 3, 3);
     }
     .footer {
         background-color: #212529;
