Changed background color of posts and hoving effect in prev

--- a/heroweb/main/templates/index.html
+++ b/heroweb/main/templates/index.html
@@ -3,7 +3,7 @@
 
 <div class='container'>
     <div class="row text-center">
-        <h1 class='mb-3 display-1'>HeroCall</h1>
+        <h1 class='mb-3 display-1'><strong>HeroCall</strong></h1>
         <hr>
         <h2>Become a hero!</h2>
         <p><i>Description</i></p>
