--- a/heroweb/main/static/css/main.css
+++ b/heroweb/main/static/css/main.css
@@ -11,6 +11,10 @@ body {
     overflow-x: hidden;
 }
 
+    .post {
+        background-color: #ffffff;
+    }
+
     .go-btn {
         background-color: rgb(86, 165, 175);
         border-color: rgb(86, 165, 175);
@@ -48,7 +52,7 @@ body {
     }
 
     .post-preview:hover {
-        background-color: #a0a0a0;
+        background-color: #e4e4e4;
         transition: 0.5s;
     }
 
