--- a/heroweb/main/templates/post.html
+++ b/heroweb/main/templates/post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class='container'>
-    <div class='row border px-4'>
+    <div class='row border px-4 post rounded'>
         <!-- Main post -->
         <h1 class='text-center m-4'>{{main_post.title}}</h1>
         <hr>
