--- a/heroweb/main/templates/post.html
+++ b/heroweb/main/templates/post.html
@@ -4,9 +4,9 @@
     <div class='row border px-4 post rounded'>
         <!-- Main post -->
         <h1 class='text-center m-4'>{{main_post.title}}</h1>
+        <p class='text-end'>Author: {{main_post.author}}</p>
         <hr>
         <p>{{main_post.text}}</p>
-        <p>Author: {{main_post.author}}</p>
         <!-- Tabs of the post -->
         <nav class='mt-3'>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
