--- a/heroweb/main/templates/builder/post_prev.html
+++ b/heroweb/main/templates/builder/post_prev.html
@@ -1,12 +1,11 @@
 {% load hero_comments %}
-<div class="card m-1 post-preview " style="width: 18rem;" onclick="{% if selected == 'focused' %}focused(this){% endif %}">
+<div class="card m-2 p-3 post-preview" style="width: 18rem;" onclick="{% if selected == 'focused' %}focused(this){% endif %}">
     <div class="card-body">
         <div class='row-custom'>
-            <h5 class="card-title">{{post.title}}</h5>
+            <h5 class="card-title my-0">{{post.title}}</h5>
             <small>{{post.author}}</small> 
         </div>
         <hr>
-<<<<<<< HEAD
         <p class="card-text">
             {% if post.text|length > 100 %}
                 {{post.text}}
@@ -16,11 +15,6 @@
         </p>
         <div class='d-flex justify-content-end'>
             <a href="{% url 'post' id=post.id %}" class='btn btn-primary text-light go-btn'>Go</a>
-=======
-        <p class="card-text">{{post.text}}</p>
-        <div >
-            <a href="{% url 'post' id=post.id %}" class='go-btn btn btn-primary'>Go</a>
->>>>>>> 2c5a89750d1726b2cc0b9920ef6bcffe45c876b5
         </div>
         {% comment %}
             {% if user == post.author %}
