--- a/heroweb/main/templates/base.html
+++ b/heroweb/main/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" style="height: 70px; font-size: large;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/" style="font-family: 'Staatliches', cursive;">HeroCall</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
