--- a/heroweb/main/templates/make_post.html
+++ b/heroweb/main/templates/make_post.html
@@ -20,7 +20,7 @@
                         {% endif %}
                         {% include "builder/tab_form.html" %}
                     </div>
-                    <button onclick="add_tab(this)" type='button' class='btn btn-outline-secondary mt-4'>Add tab</button>
+                    <button onclick="add_tab(this)" type='button' class='btn btn-secondary mt-4'>Add tab</button>
                 </fieldset>
                 <div>
                     <button type="submit" class='btn btn-success'>Create post</button>
