--- a/heroweb/main/templates/post.html
+++ b/heroweb/main/templates/post.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class='container'>
-    <div class='row border px-4 post rounded'>
+    <div class='row border p-5 post rounded'>
         <!-- Main post -->
-        <h1 class='text-center m-4'>{{main_post.title}}</h1>
+        <h1 class='text-center m-4 post-title'>{{main_post.title}}</h1>
         <p class='text-end'>Author: {{main_post.author}}</p>
         <hr>
         <p>{{main_post.text}}</p>
         <!-- Tabs of the post -->
-        <nav class='mt-3'>
+        <nav class='mt-5'>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
                 {% for tab in tabs %}
                     {% if forloop.first %}
