--- a/heroweb/main/templates/builder/horiz.html
+++ b/heroweb/main/templates/builder/horiz.html
@@ -13,11 +13,11 @@
             {% endif %}
         {% endfor %}
     </div>
-    <button class="carousel-control-prev bg-dark rounded reply-button mt-5" type="button" data-bs-target="#carouselExampleControls-{{tab.title|cut:' ' }}" data-bs-slide="prev">
+    <button class="carousel-control-prev bg-dark rounded reply-button" type="button" data-bs-target="#carouselExampleControls-{{tab.title|cut:' ' }}" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next bg-dark rounded reply-button mt-5"  type="button" data-bs-target="#carouselExampleControls-{{tab.title|cut:' ' }}" data-bs-slide="next">
+    <button class="carousel-control-next bg-dark rounded reply-button"  type="button" data-bs-target="#carouselExampleControls-{{tab.title|cut:' ' }}" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
     </button>
