--- a/heroweb/main/templates/builder/post_prev.html
+++ b/heroweb/main/templates/builder/post_prev.html
@@ -1,21 +1,19 @@
 {% load hero_comments %}
-<div class="card m-2 p-3 post-preview" style="width: 18rem;" onclick="{% if selected == 'focused' %}focused(this){% endif %}">
+<div class="card m-4 p-3 post-preview rounded" style="width: 20rem;" onclick="{% if selected == 'focused' %}focused(this){% endif %}">
     <div class="card-body">
-        <div class='row-custom'>
-            <h5 class="card-title my-0">{{post.title}}</h5>
-            <small>{{post.author}}</small> 
+        <div class='row'>
+            <h5 class="card-title my-0 text-center">
+                <a href="{% url 'post' id=post.id %}" class='text-decoration-none fs-3'>{{post.title}}</a>
+            </h5>
+            {% comment %}
+            <small class='mt-1'>{{post.author}}</small> 
+            {% endcomment %}
         </div>
         <hr>
-        <p class="card-text">
-            {% if post.text|length > 100 %}
-                {{post.text}}
-            {% else %}
-                {{post.text}}
-            {% endif %}
-        </p>
-        <div class='d-flex justify-content-end'>
-            <a href="{% url 'post' id=post.id %}" class='btn btn-primary text-light go-btn'>Go</a>
+        <div class='row'>
+            <p>{{post.text}}</p>
         </div>
+       
         {% comment %}
             {% if user == post.author %}
                 <form action="{% url 'delete_post' %}" method="GET" class='d-flex mt-2 justify-content-end end-post'>
@@ -26,7 +24,7 @@
             {% endif %}
         {% endcomment %}
     </div>
-    <div id='clicked' class='justify-content-center mb-3 mx-2' style='display: none;'>
+    <div id='clicked' class='row mb-3 mx-2' style='display: none;'>
         {% get_tabs post %}
     </div>
 </div>
