--- a/heroweb/main/templates/explore.html
+++ b/heroweb/main/templates/explore.html
@@ -5,7 +5,7 @@
     <div class="container-fluid justify-content-center">
         <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" value='Electronics'>
-            <button class="btn btn-outline-success" type="button">Search</button>
+            <button class="btn btn-success" type="button">Search</button>
         </form>
     </div>
 </nav>
