--- a/heroweb/main/templates/index.html
+++ b/heroweb/main/templates/index.html
@@ -7,6 +7,7 @@
         <hr>
         <h2>Become a hero!</h2>
         <p><i>Description</i></p>
+        <h3 class='mt-2'>Most recent problems reported. Answer the hero call!</h3>
     </div>
     <div class='d-flex row mt-5 justify-content-center'>
         {% for post in posts %}
