--- a/heroweb/main/templates/index.html
+++ b/heroweb/main/templates/index.html
@@ -6,7 +6,7 @@
         <h1 class='mb-3 display-1'><b><strong>HeroCall</strong></b></h1>
         <hr>
         <h2>Become a hero!</h2>
-        <p><i>Description</i></p>
+        <p><i>HeroCall connects people in need with heroes that can provide help</i></p>
         <h3 class='mt-2'>Most recent problems reported. Answer the hero call!</h3>
     </div>
     <div class='d-flex row mt-5 justify-content-center'>
