--- a/heroweb/main/templates/base.html
+++ b/heroweb/main/templates/base.html
@@ -34,7 +34,10 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/" style="font-family: 'Staatliches', cursive;">HeroCall</a>
+                <a class="navbar-brand" href="/" style="font-family: 'Staatliches', cursive;">
+                    <img src="/heroweb/main/static/images/hero4.png" alt="Logo">
+                    HeroCall
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -56,7 +59,7 @@
                     <ul class="navbar-nav">
                         {% if user.is_authenticated %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                                <a class="nav-link" href="{% url 'profile' %}"><i class="far fa-user"></i> Profile</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'logout' %}">Log out</a>
