--- a/heroweb/main/templates/base.html
+++ b/heroweb/main/templates/base.html
@@ -34,8 +34,8 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid">
+                <!-- <img src="https://media.discordapp.net/attachments/862849489811275816/870397898448318514/unknown.png" alt="Logo"> -->
                 <a class="navbar-brand" href="/" style="font-family: 'Staatliches', cursive;">
-                    <img src="/heroweb/main/static/images/hero4.png" alt="Logo">
                     HeroCall
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,8 +104,8 @@
                     <p>Good luck, hero!</p>
                 </div>
                 <div class='col text-end'>
-                    <a class='nav-link mx-2' href="#">About</a>
-                    <a class='nav-link mx-2' href="#">Contact us</a>
+                    <a class='nav-link mx-2 footer-text' href="#">About</a>
+                    <a class='nav-link mx-2 footer-text' href="#">Contact us</a>
                 </div>
             </div>
         </div>
