--- a/heroweb/main/static/css/main.css
+++ b/heroweb/main/static/css/main.css
@@ -72,7 +72,13 @@ h1 {
     }
 
     .post-preview a {
-        color:#616060
+        font-weight: bold;
+        /* font-size: small; */
+        color: rgb(91, 126, 208)
+    }
+
+    .post-preview a:hover{
+        color: #A421B7; 
     }
 
     .post-preview:hover {
@@ -107,11 +113,25 @@ h1 {
         font-family: 'Staatliches', cursive;
     }
 
-    .footer{
+    /* .footer{
         height: 80px;
         line-height: 0px;
     }
 
+    .footer-text{
+        margin-top: 0px;
+    } */
+
     .text-end{
         display: inline;
     }
+
+    /* not card-title */
+    h5{
+        font-weight: bold;
+        color: aqua;
+    }
+    h5:hover{
+        color: #A421B7;
+    }
+    
