I dont know anymore :/

--- a/heroweb/main/static/css/main.css
+++ b/heroweb/main/static/css/main.css
@@ -9,7 +9,7 @@ body {
     /* background-color: rgb(26, 75, 26); */
     background-color: rgb(91, 126, 208);
     background-image: linear-gradient(to right, rgb(91, 126, 208) , #A421B7);
-    CSS rules to specify families
+    /* CSS rules to specify families */
 
     font-family: 'Archivo', sans-serif;
 
