--- a/heroweb/main/templates/builder/post_prev.html
+++ b/heroweb/main/templates/builder/post_prev.html
@@ -11,7 +11,7 @@
         </div>
         <hr>
         <div class='row'>
-            <p>{{post.text}}</p>
+            <p>{{post.text|markdown_parse}}</p>
         </div>
        
         {% comment %}
