--- a/heroweb/main/static/css/main.css
+++ b/heroweb/main/static/css/main.css
@@ -9,10 +9,7 @@ body {
     /* background-color: rgb(26, 75, 26); */
     background-color: rgb(91, 126, 208);
     background-image: linear-gradient(to right, rgb(91, 126, 208) , #A421B7);
-    /* CSS rules to specify families */
-
-    font-family: 'Archivo', sans-serif;
-
+    font-family: 'Poppins', sans-serif;
     min-height: 100vh;
     overflow-x: hidden;
 }
@@ -20,15 +17,11 @@ body {
 h1 {
     font-weight: 300;
     font-family: 'PT Sans Caption', sans-serif;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-align: center;
     color: #e4e4e4;
 }
     .post {
-        background-color: #e0e0e0;
-        /* color: #616060; */
-        color: rgb(0, 0, 0);
+        background-color: #c4c4c4;
+        color: #616060;
     }
 
     .post-title {
@@ -67,18 +60,11 @@ h1 {
     .post-preview {
         transition: 0.5s;
         color: #616060;
-        /* background-color: rgb(243 226 170 / 100%); */
-        background-color: #eff8c8;
+        background-color: #ffeaca;
     }
 
     .post-preview a {
-        font-weight: bold;
-        /* font-size: small; */
-        color: rgb(91, 126, 208)
-    }
-
-    .post-preview a:hover{
-        color: #A421B7; 
+        color:#616060
     }
 
     .post-preview:hover {
@@ -108,30 +94,3 @@ h1 {
         background-color: inherit!important;
         border-bottom: none;
     }
-
-    strong{
-        font-family: 'Staatliches', cursive;
-    }
-
-    /* .footer{
-        height: 80px;
-        line-height: 0px;
-    }
-
-    .footer-text{
-        margin-top: 0px;
-    } */
-
-    .text-end{
-        display: inline;
-    }
-
-    /* not card-title */
-    h5{
-        font-weight: bold;
-        color: aqua;
-    }
-    h5:hover{
-        color: #A421B7;
-    }
-    
