--- a/heroweb/main/templates/base.html
+++ b/heroweb/main/templates/base.html
@@ -6,15 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <link rel="icon" href="/heroweb/main/static/images/hero.PNG" type="image/x-icon"> -->
-    <!-- <link rel="shortcut icon" href="/heroweb/main/static/images/icons/favicon.ico"> -->
 
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    
 
     <title></title>
-    <!-- <link rel="icon" href="/heroweb/main/static/images/icons/hero4_Y4A_icon.ico" type="image/x-icon"> -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -22,44 +18,37 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&family=Archivo:wght@300&display=swap" rel="stylesheet">
-
-    <script src="https://kit.fontawesome.com/60b2ca327b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid">
-                <!-- <img src="https://media.discordapp.net/attachments/862849489811275816/870397898448318514/unknown.png" alt="Logo"> -->
-                <a class="navbar-brand" href="/" style="font-family: 'Staatliches', cursive;">
-                    HeroCall
-                </a>
+                <a class="navbar-brand" href="/" style="font-family: 'PT Sans Caption', sans-serif;">HeroCall</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="{% url 'make_post' %}"><i class="far fa-edit"></i> Create a Post</i></a>
+                            <a class="nav-link" href="{% url 'make_post' %}">Make a post</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="{% url 'explore' %}"><i class="fab fa-wpexplorer"></i> Explore</a>
+                            <a class="nav-link" href="{% url 'explore' %}">Explore</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#"><i class="far fa-question-circle"></i> What is HeroCall?</a>
+                            <a class="nav-link" href="#">What is HeroCall</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#"><i class="fas fa-people-carry"></i> Why should I help?</a>
+                            <a class="nav-link" href="#">Why should I help</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
                         {% if user.is_authenticated %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'profile' %}"><i class="far fa-user"></i> Profile</a>
+                                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'logout' %}">Log out</a>
@@ -104,8 +93,8 @@
                     <p>Good luck, hero!</p>
                 </div>
                 <div class='col text-end'>
-                    <a class='nav-link mx-2 footer-text' href="#">About</a>
-                    <a class='nav-link mx-2 footer-text' href="#">Contact us</a>
+                    <a class='nav-link mx-2' href="#">About</a>
+                    <a class='nav-link mx-2' href="#">Contact us</a>
                 </div>
             </div>
         </div>
