--- a/heroweb/main/templates/base.html
+++ b/heroweb/main/templates/base.html
@@ -36,7 +36,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid">
-                <img src="{% static 'img/hero4.png' %}" alt="logo" style="height: 40px; margin-right: 10px;">
+                <!-- <img src="{% static 'img/hero4.png' %}" alt="logo" style="height: 40px; margin-right: 10px;"> -->
                 <a class="navbar-brand" href="/" style="font-family: 'Staatliches', cursive;">HeroCall</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
