--- a/heroweb/main/templates/base.html
+++ b/heroweb/main/templates/base.html
@@ -66,7 +66,7 @@
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'login' %}">Log in</a>
+                                <a class="nav-link" href="{% url 'login' %}"><i class="far fa-user"></i> Log in</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'create_account' %}">Create an account</a>
