--- a/heroweb/main/templates/explore.html
+++ b/heroweb/main/templates/explore.html
@@ -3,14 +3,17 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container-fluid justify-content-center">
-        <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" value='Electronics'>
-            <button class="btn btn-success" type="button">Search</button>
+        <form class="d-flex" method="POST">
+            {% csrf_token %}
+            <input class="form-control me-2" type="search" name="search" placeholder="Search" aria-label="Search" value='{{search}}'>
+            <button class="btn btn-success" type="submit">Search</button>
         </form>
     </div>
 </nav>
 <div class="text-center">
-    <small>Results about <i>Electronics</i></small>
+    {% if search %}
+        <small>Results about <i>{{search}}</i></small>
+    {% endif %}
 </div>
 
 <div class='d-flex row mt-5 justify-content-center'>
